--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "@storybook/test": "^8.6.15",
     "@types/geojson": "^7946.0.16",
     "@types/mapbox__mapbox-gl-draw": "^1.4.9",
+    "@types/rbush": "^4.0.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
